PhD Proposal Monday 01

--- a/PhDProposal 01/Chp2-Pre/PreResults2.tex
+++ b/PhDProposal 01/Chp2-Pre/PreResults2.tex
@@ -15,6 +15,8 @@ This will be a first! first proper ecological model apart from this Export Flux 
 
 
 FUNCTIONAL TYPES STRUCTURE --> explain linkage between Pigment Data that I use and functional diversity measurements (XMoreno et al. 2012X) take this from Pinckney et al. 2015...
+
+Interesting thing is that there was this shift in the PhytoplanktonCommunity but apparently no real reduction in Export! (This is in Taylor and Pinckney somehwere)
 bb
 
 
@@ -28,6 +30,11 @@ EXPLAIN THE HYPOTHESES HERE; AND HOW THEY CAN BE TESteD
 
 dont really go into depth here, just generally state how things are done, python, odeint, system of ODEs
 
+COPY METHODS SECTION FROM PhytoSFDM in a way, but with the current model setup
+including the equations and allofthat!
+
+SHOW MODEL SCHEMATICS!
+
 XXXX
 
 \subsection{Model physics in a tropical coastal setting}
@@ -35,6 +42,10 @@ xXXX
 
 Most models built for temperate oceans, since that is where reasearch (and funding) has been most well developed. Fasham NPZD type slabe physics explain.
 Why won't this fit well in the Cariaco setting? - mostly due to shallow and comparatively invariable MLD, and nutrient fluxes don't correlate.
+Problem of nutrient forcing! If MLD driven, nutrients below MLD are highly variable, only below 100m do we get towards a relatively constant N0 and Si0 (can show plots here!)
+
+Moved from slab physics of PhytoSFDM model \citep{Acevedo-Trejos2016} which is based on Fasham \citep{Evans2003,Fasham1990a} to a box model formulation adapted from Tyrrell \citep{Tyrrell1999}
+The specific differences are (show equations):
 
 HERE I CAN SHOW THE DIFFERENT MODEL RUNS, explain the difference
 for this box model needs to get running! This won't be so easy.. so plan ample time my friend!
