--- a/PhDProposal 01/proposal.bib
+++ b/PhDProposal 01/proposal.bib
@@ -1,3 +1,244 @@
+@article{Flynn2015,
+author = {Flynn, Kevin J and {St John}, Michael and Raven, John A and Skibinski, David O F and Allen, J Icarus and Mitra, Aditee and Hofmann, Eileen E},
+file = {:Users/bp/Documents/Mendeley Desktop/fbv036.pdf:pdf},
+issn = {1464-3774},
+journal = {Journal of Plankton Research},
+mendeley-groups = {To Read! newer stuff,PhD Proposal BibTex/cited},
+number = {4},
+pages = {683--691},
+publisher = {Oxford University Press},
+title = {{Acclimation, adaptation, traits and trade-offs in plankton functional type models: reconciling terminology for biology and modelling}},
+volume = {37},
+year = {2015}
+}
+
+
+@article{Tilman1990,
+abstract = {The development of mechanistic, predictive ecological theory will entail the explicit inclusion of organismal tradeoffs, of environmental constraints, and of the basic mechanisms of interspecific interaction. This approach was used to address the causes of species dominance and successional dynamics in sandplain vegetation in Minne- sota. A series of field experiments performed over the last eight years have shown that the major constraints on plants were soil nitrogen and disturbance, with nitrogen competition being a major force. Nutrients other than nitrogen (P, K, Ca, Mg, S and trace metals), herbivory, and light were of minor importance. As predicted by theory, the superior nitrogen competitors were the species that, when growing in long-term monocultures in the field, lowered soil extractable N the most. These species had high root biomass and low tissue N levels. Seven alternative hypotheses of succession, each named after its underlying tradeoff, were proposed and tested. The colonization - nutrient competition hypothesis pro- vided the best explanation for the initial dominance (years 0 to 40) of herbs, whereas the nutrient versus light competition hypothesis best explained the long-term dom- inance by woody plants. Hypotheses involving transient dynamics caused by differ- ences in maximal growth rates were rejected. In total, the results demonstrate that the inclusion of simple mechanisms of interspecific interactions, and of allocation- based tradeoffs, can allow models to predict the composition and successional dy- namics of vegetation},
+author = {Tilman, David},
+doi = {10.2307/3565355},
+issn = {00301299},
+journal = {Oikos},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {1},
+pages = {3},
+publisher = {JSTOR},
+title = {{Constraints and Tradeoffs: Toward a Predictive Theory of Competition and Succession}},
+volume = {58},
+year = {1990}
+}
+
+
+@article{Iglesias-Rodriguez2002,
+abstract = {Carbonates are the largest reservoirs of carbon on Earth. From mid-Mesozoic time, the biologically catalyzed precipitation of calcium carbonates by pelagic phytoplankton has been primarily due to the production of calcite by coccolithophorids. In this paper we address the physical and chemical processes that select for coccolithophorid blooms detected in Sea-viewing Wide Field-of-view Sensor (SeaWiFS) ocean color imagery. Our primary goal is to develop both diagnostic and prognostic models that represent the spatial and temporal dynamics of coccolithophorid blooms in order to improve our knowledge of the role of these organisms in mediating fluxes of carbon between the ocean, the atmosphere, and the lithosphere. On the basis of monthly composite images of classified coccolithophorid blooms and global climatological maps of physical variables and nutrient fields, we developed a probability density function that accounts for the physical chemical variables that predict the spatiotemporal distribution of coccolithophorids in the world oceans. Our analysis revealed that areas with sea surface temperatures (SST) between 3° and 15°C, a critical irradiance between 25 and 150 µmol quanta m-2 s-1, and decreasing nitrate concentrations (N/t {\textless} 0) are selective for upper ocean large-scale coccolithophorid blooms. While these conditions favor both Northern and Southern Hemisphere blooms of the most abundant coccolithophorid in the modern oceans, Emiliania huxleyi, the Northern and Southern Hemisphere populations of this organism are genetically distinct. Applying amplified fragment length polymorphism as a marker of genetic diversity, we identified two major taxonomic clades of E. huxleyi; one is associated with the Northern Hemisphere blooms, while the other is found in the Southern Hemisphere. We suggest a rule of “universal distribution and local selection”: that is, coccolithophorids can be considered cosmopolitan taxa, but their genetic plasticity provides physiological accommodation to local environmental selection pressure. Sea surface temperature, critical irradiance, and N/t were predicted for the years 2060–2070 using the NCAR Community Climate System Model to generate future monthly probability distributions of coccolithophorids based upon the relationships observed between the environmental variables and coccolithophorid blooms in modern oceans. Our projected probability distribution analysis suggests that in the North Atlantic, the largest habitat for coccolithophorids on Earth, the areal extent of blooms will decrease by up to 50{\%} by the middle of this century. We discuss how the magnitude of carbon fluxes may be affected by the evolutionary success of coccolithophorids in future climate scenarios.},
+author = {Iglesias-Rodr{\'{i}}guez, M. D{\'{e}}bora and Brown, Christopher W. and Doney, Scott C. and Kleypas, Joan and Kolber, Dorota and Kolber, Zbigniew and Hayes, Paul K. and Falkowski, Paul G.},
+doi = {10.1029/2001gb001454},
+issn = {0886-6236},
+journal = {Global Biogeochemical Cycles},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {4},
+pages = {47--1--47--20},
+publisher = {Wiley Online Library},
+title = {{Representing key phytoplankton functional groups in ocean carbon cycle models: Coccolithophorids}},
+volume = {16},
+year = {2002}
+}
+
+
+@article{Violle2007c,
+abstract = {In its simplest definition, a trait is a surrogate of organismal performance, and this meaning of the term has been used by evolutionists for a long time. Over the last three decades, developments in community and ecosystem ecology have forced the concept of trait beyond these original boundaries, and trait-based approaches are now widely used in studies ranging from the level of organisms to that of ecosystems. Despite some attempts to fix the terminology, especially in plant ecology, there is currently a high degree of confusion in the use, not only of the term “trait” itself, but also in the underlying concepts it refers to. We therefore give an unambiguous definition of plant trait, with a particular emphasis on functional trait. A hierarchical perspective is proposed, extending the “performance paradigm” to plant ecology. “Functional traits” are defined as morpho-physio-phenological traits which impact fitness indirectly via their effects on growth, reproduction and survival, the three components of individual performance. We finally present an integrative framework explaining how changes in trait values due to environmental variations are translated into organismal performance, and how these changes may influence processes at higher organizational levels. We argue that this can be achieved by developing “integration functions” which can be grouped into functional response (community level) and effect (ecosystem level) algorithms.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:physics/0412009v1},
+author = {Violle, Cyrille and Navas, Marie Laure and Vile, Denis and Kazakou, Elena and Fortunel, Claire and Hummel, Ir{\`{e}}ne and Garnier, Eric},
+doi = {10.1111/j.0030-1299.2007.15559.x},
+eprint = {0412009v1},
+file = {:Users/bp/Documents/Mendeley Desktop/40235131.pdf:pdf},
+isbn = {0030-1299},
+issn = {16000706},
+journal = {Oikos},
+mendeley-groups = {CARIACO/8MonthsReport - Jacobs/GeneralTraitStuff,DAAD app,PhD Proposal BibTex/cited},
+number = {5},
+pages = {882--892},
+pmid = {245814500017},
+primaryClass = {arXiv:physics},
+title = {{Let the concept of trait be functional!}},
+volume = {116},
+year = {2007}
+}
+
+
+@article{McGill2006,
+abstract = {There is considerable debate about whether community ecology will ever produce general principles. We suggest here that this can be achieved but that community ecology has lost its way by focusing on pairwise species interactions independent of the environment. We assert that community ecology should return to an emphasis on four themes that are tied together by a two-step process: how the fundamental niche is governed by functional traits within the context of abiotic environmental gradients; and how the interaction between traits and fundamental niches maps onto the realized niche in the context of a biotic interaction milieu. We suggest this approach can create a more quantitative and predictive science that can more readily address issues of global change. {\textcopyright} 2006 Elsevier Ltd. All rights reserved.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {McGill, Brian J. and Enquist, Brian J. and Weiher, Evan and Westoby, Mark},
+doi = {10.1016/j.tree.2006.02.002},
+eprint = {arXiv:1011.1669v3},
+file = {:Users/bp/Documents/Mendeley Desktop/RebuilidingCommunityEcologyFunctionalTraits.pdf:pdf},
+isbn = {0169-5347},
+issn = {01695347},
+journal = {Trends in Ecology and Evolution},
+mendeley-groups = {RNDM,PhD Proposal BibTex/cited},
+number = {4},
+pages = {178--185},
+pmid = {16701083},
+title = {{Rebuilding community ecology from functional traits}},
+volume = {21},
+year = {2006}
+}
+
+
+@article{Tilman2001,
+author = {Tilman, David},
+file = {:Users/bp/Documents/Mendeley Desktop/t1797.pdf:pdf},
+journal = {Encyclopedia of Biodiversity},
+keywords = {ecosystem functioning,functional diversity,functional groups,niche differentation},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {1},
+pages = {13},
+title = {{Functional diversity}},
+volume = {3},
+year = {2001}
+}
+
+
+@article{Litchman2008,
+abstract = {Trait-based approaches are increasingly used in ecology. Phytoplankton communities, with a rich history, as model systems in community, ecology, are ideally suited for applying and further developing these concepts. Here we summarize the essential components of trait-based approaches and review their historical and potential application to illuminating phytoplankton community ecology Major ecological axes relevant to phytoplankton include light and nutrient acquisition and use, natural enemy interactions, morphological variation, temperature sensitivity, and modes of reproduction. Trade-offs between these traits play key roles in determining community structure. Freshwater and marine environments may select fora different suite of traits owing to their different physical and chemical properties. We describe mathematical techniques for integrating traits into measures of growth and fitness and predicting how community structure varies along environmental gradients. Finally, we outline challenges and future directions for the application of trait-based approaches to phytoplankton ecology},
+author = {Litchman, Elena and Klausmeier, Christopher A.},
+doi = {10.1146/annurev.ecolsys.39.110707.173549},
+issn = {1543-592X},
+journal = {Annual Review of Ecology, Evolution, and Systematics},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {1},
+pages = {615--639},
+publisher = {Annual Reviews},
+title = {{Trait-Based Community Ecology of Phytoplankton}},
+volume = {39},
+year = {2008}
+}
+
+
+@article{Engelen2015,
+abstract = {Marine plankton support global biological and geochemical processes. Surveys of their biodiversity have hitherto been geographically restricted and have not accounted for the full range of plankton size.We assessed eukaryotic diversity from 334 size-fractionated photic-zone plankton communities collected across tropical and temperate oceans during the circumglobal Tara Oceans expedition.We analyzed 18S ribosomal DNA sequences across the intermediate plankton-size spectrum from the smallest unicellular eukaryotes (protists, {\textgreater}0.8 micrometers) to small animals of a few millimeters. Eukaryotic ribosomal diversity saturated at {\~{}}150,000 operational taxonomic units, about one-third of which could not be assigned to known eukaryotic groups. Diversity emerged at all taxonomic levels, both within the groups comprising the {\~{}}11,200 cataloged morphospecies of eukaryotic plankton and among twice as many other deep-branching lineages of unappreciated importance in plankton ecology studies. Most eukaryotic plankton biodiversity belonged to heterotrophic protistan groups, particularly those known to be parasites or symbiotic hosts. he},
+archivePrefix = {arXiv},
+arxivId = {arXiv:gr-qc/9809069v1},
+author = {Engelen, S and Hingamp, P and Sieracki, M and Vargas, Cd and Audic, S and Henry, N and Decelle, J and Mah{\'{e}}, F and Logares, R and Lara, E and Berney, C and Bescot, Nl and Probert, I and Carmichael, M and Poulain, J and Romac, S},
+doi = {10.1007/s13398-014-0173-7.2},
+eprint = {9809069v1},
+isbn = {9780874216561},
+issn = {0717-6163},
+journal = {Science},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {6237},
+pages = {1261605--1/11},
+pmid = {15003161},
+primaryClass = {arXiv:gr-qc},
+publisher = {American Association for the Advancement of Science},
+title = {{Eukaryotic plankton diversity in the sunlit ocean}},
+volume = {348},
+year = {2015}
+}
+
+
+@article{IrwinAndrewJ.Finkel2017b,
+abstract = {Phytoplankton functional types are groupings of many species into a smaller number of types according to their ecological or biogeochemical role. Models describe phytoplankton functional types by a set of traits that determine their growth rates or fitness. Traits for functional types are often determined from observations on a small number of species under laboratory conditions. Functional types can be composed of a large number of species with very different trait values, so the representation of a type by an average trait value may not be appropriate. A potential solution is to estimate trait values from observations of the aggregate biomass of phytoplankton functional types in natural populations. We report on some recent efforts to extract trait values from time-series data using Bayesian statistical models and discuss some challenges of this approach.},
+archivePrefix = {arXiv},
+arxivId = {https://doi.org/10.1101/148312},
+author = {Irwin, Andrew J. and Finkel, Zoe V},
+doi = {10.1101/148312},
+eprint = {/doi.org/10.1101/148312},
+file = {:Users/bp/Documents/Mendeley Desktop//Irwin, Finkel - 2017 - Phytoplankton functional types A trait perspective.pdf:pdf},
+journal = {bioRxiv},
+keywords = {cell size,functional types,niches,phytoplankton,time series,traits},
+mendeley-groups = {Ago,CARIACO/8MonthsReport - Jacobs,PhD Proposal BibTex/cited},
+month = {jun},
+pages = {148312},
+primaryClass = {https:},
+publisher = {Cold Spring Harbor Laboratory},
+title = {{Phytoplankton functional types: A trait perspective}},
+url = {https://www.biorxiv.org/content/early/2017/06/13/148312},
+year = {2017}
+}
+
+
+@article{Tyrrell1999,
+abstract = {A simple model has the potential to resolve the long-running debate amongst oceanographers over whether nitrogen or phosphorus exerts overall control on oceanic primary production. A representation of the competition between nitrogen-fixing and other phytoplankton is inserted into a two-box global model of the oceanic nitrogen and phosphorus cycles. Homeostatic regulation of both nitrate and phosphate concentrations results, with surface waters more deficient in nitrate than phosphate in the steady state, but with external phosphate inputs controlling longer-term primary production in the global ocean.},
+annote = {AGO: An interesting modelling application to understand the mechanism driving the N:P ratio in the global ocean. The model captures the competition between two main classes of phytoplankton: nitrogen-fixers and all others. It's part of my lectures, if you remember.},
+author = {Tyrrell, Toby},
+doi = {10.1038/22941},
+file = {:Users/bp/Documents/Mendeley Desktop/Tyrrell - 1999 - The relative influences of nitrogen and phosphorus on oceanic primary production.pdf:pdf},
+isbn = {0028-0836},
+issn = {00280836},
+journal = {Nature},
+keywords = {0D-Models,GC Oceanography,QH301 Biology},
+mendeley-groups = {Ago,To Read! newer stuff,PhD Proposal BibTex/cited},
+mendeley-tags = {0D-Models},
+month = {aug},
+number = {6744},
+pages = {525--531},
+pmid = {310},
+publisher = {Nature Publishing Group},
+title = {{The relative influences of nitrogen and phosphorus on oceanic primary production}},
+url = {http://www.nature.com/articles/22941 http://www.nature.com/nature/journal/v400/n6744/full/400525a0.html{\%}5Cnhttp://www.nature.com/doifinder/10.1038/22941},
+volume = {400},
+year = {1999}
+}
+
+
+@article{Fasham1990a,
+abstract = {As a first step toward the development of coupled, basin scale models of ocean circulation and biogeochemical cycling, we present a model of the annual cycles of plankton dynamics and nitrogen cycling in the oceanic mixed layer. The model is easily modified and runs in FOR- TRAN on a personal computer. In our initial development and exploration of the model's behavior we have concentrated on modeling the annual cycle at Station "S" near Bermuda using seven compartments (Phytoplankton, Zooplankton, Bacteria, Nitrate, Ammonium, Dissolved organic nitrogen and Detritus). This choice of compartments and the attendant flows (fluxes or intercompartmental exchanges) permits a functional distinction between new and regenerated production. We have examined over 200 different runs and carried out sensitivity analyses. Results of model runs with detrital sinking rates of I and 10 meters per day are presented. In these runs, the phytoplankton biomass-specific mortality rate was varied to adjust the annual net primary production (NPP) for the mixed layer to a value equivalent to 45 gC m-2, which was calculated from the literature. Modelled cycles of zooplankton and bacterial stocks, and magnitudes of their annual production which cannot be validated due to sparse observations, are driven by the amplitude of the spring bloom and by changes in foodweb structure. Most, but not all model runs exhibit a spring bloom triggered by the winter depression of zooplankton stocks and the vernal increase in solar irradiance. The bloom is driven by nitrate entrained into the mixed layer during the wintertime deepening of the mixed layer. Following the shoaling of the pycnocline to ca 20 m, nitrate supply is limited to diffusional inputs, nitrate stocks are depleted, and regenerated production exceeds new production. The resulting cycles of new and regener- ated production produce an annual cycle of the f-ratio with winter maxima approaching 0.8-0.9 and summer minima reaching ca 0.1-0.2, with annual values averaging 0.7. The model reproduces the "Eppley Curve," a hyperbolic relationship of increasing f with increasing primary production. This curve is shown to be the trajectory of the production system in the f-NPP phase plane. These model runs reproduce the annual cycles of areal NPP, and average annual NPP, new production, and particulate N flux values reported in the literature. The model demonstrates that currently accepted values for these annual fluxes can be reconciled only if the f-ratio has a high annual average. At present, the annual averagef-ratio is poorly quantified due to severe undersampling in fall and winter. Our model's ecological structure has been success- fully incorporated into the Princeton general circulation model for the North Atlantic Ocean. The behavior of the 7-compartment model at high latitudes and at the equator, and the properties of 9-compartment models with two size classes of phytoplankton and grazers, are now being examined.},
+author = {Fasham, M. J. R. and Ducklow, H. W. and McKelvie, S. M.},
+doi = {10.1357/002224090784984678},
+file = {:Users/bp/Documents/Mendeley Desktop/s6.pdf:pdf},
+issn = {0022-2402},
+journal = {Journal of Marine Research},
+mendeley-groups = {CARIACO/Model Params,PhD Proposal BibTex/cited},
+number = {3},
+pages = {591--639},
+title = {{A nitrogen-based model of plankton dynamics in the oceanic mixed layer}},
+volume = {48},
+year = {1990}
+}
+
+
+@article{Evans2003,
+abstract = {AbstractA model is presented that exhibits a spring phytoplankton bloom as one feature of a steadily repeating annual cycle of plankton populations. Populations respond to seasonal changes in light (which are gradual) and in mixed layer depth (which may be rapid). The occurrence of a bloom does not require a shallowing of the mixed layer; it does require a low rate of primary production in winter. The lack of phytoplankton blooms in the subarctic Pacific can be explained in terms of this model.Analysis of a simplified version of the model shows that a bloom is a deviation from quasi-equilibrium behavior and explains why this will occur when winter production rates are low.$\backslash$nAbstractA model is presented that exhibits a spring phytoplankton bloom as one feature of a steadily repeating annual cycle of plankton populations. Populations respond to seasonal changes in light (which are gradual) and in mixed layer depth (which may be rapid). The occurrence of a bloom does not require a shallowing of the mixed layer; it does require a low rate of primary production in winter. The lack of phytoplankton blooms in the subarctic Pacific can be explained in terms of this model.Analysis of a simplified version of the model shows that a bloom is a deviation from quasi-equilibrium behavior and explains why this will occur when winter production rates are low.},
+author = {Evans, Geoffrey T and Parslow, John S},
+doi = {10.1016/0198-0254(85)92902-4},
+issn = {01980254},
+journal = {Deep Sea Research Part B. Oceanographic Literature Review},
+mendeley-groups = {PhD Proposal BibTex/cited},
+number = {9},
+pages = {759},
+publisher = {Taylor {\&} Francis},
+title = {{A model of annual plankton cycles}},
+volume = {32},
+year = {2003}
+}
+
+
+@article{Acevedo-Trejos2016,
+abstract = {Biodiversity is one of the key mechanisms that facilitate the adaptive response of planktonic communities to a fluctuating environment. How to allow for such a flexible response in marine ecosystem models is, however, not entirely clear. One particular way is to resolve the natural complexity of phytoplankton communities by explicitly incorporating a large number of species or plankton functional types. Alternatively, models of aggregate community properties focus on macroecological quantities such as total biomass, mean trait, and trait variance (or functional trait diversity), thus reducing the observed natural complexity to a few mathematical expressions. We developed the modelling tool PhytoSFDM, which can resolve species discretely and can capture aggregate community properties. The tool also provides a set of methods for treating diversity under realistic oceanographic settings. This model is coded in Python and is distributed as an open-source software. PhytoSFDM is implemented in a 0D physical scheme and can be applied to any location of the world oceans. We show that aggregate-community models reduce computational complexity while preserving relevant macroecological features of phytoplankton communities. Compared to species-explicit models, aggregate models are more manageable in terms of number of equations and have faster computational times. Further developments of this tool should address the caveats associated with the assumptions of aggregate community models and on implementations into spatially resolved physical settings (1D and 3D). With PhytoSFDM we embrace the idea of promoting open source software and encourage scientists to build on this modelling tool to further improve our understanding of the role that biodiversity plays in shaping marine ecosystems.},
+annote = {AGO: This is an open source version of Esteban's model (above) which includes different ways of sustaining size variance (i.e. size diversity).},
+author = {Acevedo-Trejos, Esteban and Brandt, Gunnar and {Lan Smith}, S. and Merico, Agostino},
+doi = {10.5194/gmd-9-4071-2016},
+file = {:Users/bp/Documents/Mendeley Desktop/acevedo-trejos-et-al-2016.pdf:pdf},
+isbn = {1991-962X},
+issn = {19919603},
+journal = {Geoscientific Model Development},
+keywords = {0D-Models},
+mendeley-groups = {Ago,PhD Proposal BibTex/not yet cited,PhD Proposal BibTex/cited},
+mendeley-tags = {0D-Models},
+month = {nov},
+number = {11},
+pages = {4071--4085},
+title = {{PhytoSFDM version 1.0.0: Phytoplankton Size and Functional Diversity Model}},
+url = {https://www.geosci-model-dev.net/9/4071/2016/},
+volume = {9},
+year = {2016}
+}
+
+
 @article{Chavez2011a,
 abstract = {Marine photosynthetic plankton are responsible for approximately 50 petagrams (10(15)) of carbon per year of net primary production, an amount equivalent to that on land. This primary production supports essentially all life in the oceans and profoundly affects global biogeochemical cycles and climate. This review discusses the general distribution of primary production in the sea, the processes that regulate this distribution, and how marine primary production is sensitive to climate variability and change. Statistical modes of ocean variability and their characteristic interannual to multi-decadal timescales over the last century are described. Recent in situ and satellite time-series of primary production can be clearly linked to interannual ocean variability. Global marine primary production appears to have increased over the past several decades in association with multi-decadal variations. A paleoclimate record extends discussion to the centennial scale, providing contrasting insights into how marine primary production might vary in the future.},
 annote = {very general analysis of relationship between climate variability indices, like ENSO, and marine primary production
