--- a/PhDProposal 01/Chp1-Intro/Intro.tex
+++ b/PhDProposal 01/Chp1-Intro/Intro.tex
@@ -3,7 +3,8 @@
 \section{The ocean, phytoplankton and why it matters}
 The complexity of the ocean and its vast ecosystems has fascinated scientists to this day and most likely will continue to do so far into the future. Myriad life forms are embedded in a matrix so far removed from our mostly dry existence on top the earth’s crust. In the ocean, life moves in dilution, and the equivalents of forests and grasslands are hard to spot unless the concentration of tiny phytoplankton is so large, that deep blue turns into a milky green.
 
-The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis \citep{Field2009}. Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background \citep{Falkowski2004a}. This large genetic diversity is accompanied by a remarkable range of survival strategies, biogeochemical roles, shapes and sizes within the polyphyletic phytoplankton (see Figure \ref{FinkelPhySizeRange} for a size comparison).
+The term phytoplankton refers to microscopic marine photosynthetic organisms. These microorganisms form the basis of the oceanic food web and are primary producers of planetary scale, contributing roughly half of the oxygen in our atmosphere through photosynthesis \citep{Field2009}. Phytoplankton consists of mostly single-celled organisms, prokaryotes and eukaryotes from a highly diverse evolutionary background \citep{Falkowski2004a}. This large genetic diversity is accompanied by a remarkable range of survival strategies, biogeochemical roles, shapes and sizes within the polyphyletic phytoplankton (see Figure \ref{FinkelPhySizeRange} for a size comparison). 
+The emergence of such a large range of organisms and the mechanisms sustaining their persistence has been one of the key topics in phytoplankton ecology over the last 50 years. Hutchinson's paradox.X(REF here)X
 
 \begin{figure}
 \centering
@@ -22,20 +23,26 @@ Studies have both reported a global declining trend in marine primary production
 In order to answer questions of how phytoplankton will respond to a changing climate it is necessary to look the diverse phytoplankton community in greater detail. 
 
 \section{Characterizing phytoplankton}
+From the early days of oceanographic research, scientists have been interested in the microscopic organisms that were floating in samples of sea water. These communities contain many species each and in total there are tens of thousands of species of phytoplankton that inhabit the surface ocean \citep{Engelen2015}. All phytoplankton species use chlorophyll or bacteriochlorophyll to harvest light as the energy source to fix organic carbon, but there is wide variation in virtually all their other properties \citep{Litchman2008}. In addition to the complex community composition, there are many factors affecting measurements of their bulk properties in the ocean, such as the viral and bacterial community and the influence of diverse grazers, all within the complex three-dimensional physical environment that is the ocean. Where earlier phytoplankton ecologists focused on identifying individual species and decoding their phylogeny, recent research is trying to quantify the diversity on higher levels of organization and relating it to other properties of the ecosystem. The focus has shifted towards trait diversity both within and across species and within and across functional groups. In order to scientifically describe this perplexing diversity the concepts of trait-based ecology and functional types have been developed \citep{Tilman2001,McGill2006,Violle2007c}.
 
-Given the relevance of phytoplankton to the global 
+\subsection{Functional types and traits}
+In the following I will try to clarify the complementary terms of phytoplankton traits, functional traits, and functional groups. 
 
-How did Researchers start dealing with Phytoplankton?
+The trait-based approach to phytoplankton ecology has been growing in popularity. Part of the fascination evoked by this term stems from its origin in evolutionarily theory. Over the last three decades, it has been adopted by ecologists trying to understand communities and ecosystems. In this new context, the concept of traits has been stretched far beyond its original meaning, which can lead to some confusion surrounding the scope of trait-based methods \citep{Violle2007c}. In the simplest definition, a trait is a surrogate of organismal performance. In the ecological context this has been expanded to surrogates for the performance of populations, communities and entire ecosystems. This can include ecophysiological traits, life-history traits, demographic traits or response and effect traits of ecosystems. Theoretically, any property of an organism or ecosystem could be defined as a trait, but ideally a trait should be functional. Functional traits are defined by \cite{Violle2007c} as "morpho-, physio- or phenological traits which impact fitness indirectly via their effects on growth, reproduction and survival". 
 
-Two approaches to isolate strains, or take bulk properties
+An important facet of the trait-based approach is to describe organismal function via trade-offs between traits. For example when competing for multiple nutrients, phytoplankton species are thought to be constrained by trade-offs in their competitive ability for one over another resource \citep{Tilman1990}. Phytoplankton are an extremely diverse and polyphyletic group of photosynthetic microorganisms, including protists and cyanobacteria, and scientists have been struggling to unify ecological concepts to produce general principles. The trait based approach lends itself to generalizations, as traits and ecological trade-offs can be defined and explored irrespective of species or taxa boundaries \citep{McGill2006}.
+ 
+Major taxonomic groups of phytoplankton can be classified into functional groups, based on their biogeochemical roles within the ecosystem \citep{Iglesias-Rodriguez2002}. 
 
-Obviously bulk properties also have to be taken from specific depth
+There is debate still how to define functional groups of phytoplankton \citep{Flynn2015}.
 
-so this adds the problem of the complexity of the physical environment that is the ocean, with enormous volume, turbulunce mixing, diffusion and absorbance
 
-I want to look at phytoplankton diversity, particularly from a functional type point of view. Quantify diversity as it relates to ecosystem function (as production for example).
+XX
 
-The emergence of such a large range of organisms and the mechanisms sustaining their persistence has been one of the key topics in phytoplankton ecology over the last 50 years. Hutchinson's paradox.
+
+
+\citep{IrwinAndrewJ.Finkel2017b}
+
 
 "Moreover, major taxonomic groups of eukaryotic phyto- plankton can be classified into distinct functional groups (Iglesias-Rodriguez et al. 2002a) with unique biogeochemical signatures. Here, we combine the trait-based approach with the taxonomic sLASh phylogenetic information by broadly sam- pling relevant traits across major taxonomic groups of marine phytoplankton to gain new insights into the effects of evolutionary history on the physiological trait distribu- tions and community structure. An important aspect of a trait-based approach to
 "community ecology is the trade-offs between traits (Tilman 1990; Grover 1991; Bohannan et al. 2002). When compe- tition for multiple resources is considered, species are thought to have trade-offs in their competitive ability for one vs. another nutrient (Tilman 1982) or for nutrient vs. light (Huisman \& Weissing 1994; Leibold 1997; Klausmeier \& Litchman 2001). Under non-equilibrium conditions, a trade-off between competitive ability and maximum growth rate may
@@ -48,13 +55,6 @@ XXX
 "Phytoplankton can be characterised by many morphological, physiological, behavioural and life history traits and trade-offs \citep{Litchman2008, Litchman2010}.
 
 "Studies on the phytoplankton community composition and their response to the environmental gradients are not novel. Ramón Margalef was probably one of the first ecologist to give an important momentum to the topic.  \citep{Margalef1978} used observations of key traits, such as nutrient utilization and sinking rates, to support his well known concept called "Margalef's mandala". His classification of phytoplankton functional types (PFTs) at different nutrient and turbulent environmental conditions represents an excellent first example of how the trait-based notion can be applied to better understand phytoplankton community ecology, therefore setting up the stage for further developments in the field.
-
-
-\subsection{Functional types and traits}
-
-“Ecology has traditionally focused on species diversity as a way of characterizing the
-health of an ecosystem. In recent years, however, the focus has increasingly shifted
-towards trait diversity both within and across species” - from Functional Diversity Book
 
 We have incredibly diverse Phytoplankton, and want to analyze traits and model -> need to simplify somehow => Functional Types
 
